--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         <nav id="navbar" class="navbar navbar-expand-md navbar-dark bg-dark shadow-sm">
 
             <a class="navbar-brand" href="https://2take1.menu">
-                <img src="https://cdn.2take1.menu/img/logo.png" height="50px" style="margin-top: -5px; margin-bottom: -5px" alt="" />
+                <img src="https://mypic.icu/image.php?id=J68IMV.png" height="50px" style="margin-top: -5px; margin-bottom: -5px" alt="" />
                 2Take1
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
